--- a/BiblioNetAPP/Views/Book/Create.cshtml
+++ b/BiblioNetAPP/Views/Book/Create.cshtml
@@ -13,5 +13,10 @@
         <input type="text" asp-for="BookName" class="form-control" />
         <span asp-validation-for="BookName" class="text-danger"></span>
     </div>
+    <div class="mb-3">
+        <label asp-for="Author" class="form-label"></label>
+        <input type="text" asp-for="Author" class="form-control" />
+        <span asp-validation-for="Author" class="text-danger"></span>
+    </div>
     <button type="submit" class="btn btn-primary">Create</button>
 </form>
