--- a/BiblioNetAPP/Views/Book/Create.cshtml
+++ b/BiblioNetAPP/Views/Book/Create.cshtml
@@ -14,9 +14,9 @@
         <span asp-validation-for="BookName" class="text-danger"></span>
     </div>
     <div class="mb-3">
-        <label asp-for="Author" class="form-label"></label>
-        <input type="text" asp-for="Author" class="form-control" />
-        <span asp-validation-for="Author" class="text-danger"></span>
+        <label asp-for="Price" class="form-label"></label>
+        <input type="number" asp-for="Price" class="form-control" />
+        <span asp-validation-for="Price" class="text-danger"></span>
     </div>
     <button type="submit" class="btn btn-primary">Create</button>
 </form>
